Updated flash notification

--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -4,29 +4,32 @@
 
 {% block body %}
     <div class="px-4 sm:px-6 lg:px-8 py-8">
-
-        {% for message in app.flashes('success') %}
-            <div class="fixed top-4 right-4 w-96 rounded-lg bg-green-50 p-4 z-50" x-data="{ show: true }" x-show="show" x-transition>
-                <div class="flex items-start space-x-3">
-                    <div class="flex-shrink-0">
-                        <svg class="h-6 w-6 text-green-400" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
-                    </div>
-                    <div class="flex-1">
-                        <p class="text-sm font-medium text-green-800">{{ message }}</p>
-                    </div>
-                    <div class="flex-shrink-0">
-                        <button type="button" @click="show = false" class="inline-flex rounded-md bg-green-50 text-green-500 hover:text-green-600 focus:outline-none">
-                            <span class="sr-only">Fermer</span>
-                            <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                                <path d="M6.28 5.22a.75.75 0 00-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 101.06 1.06L10 11.06l3.72 3.72a.75.75 0 101.06-1.06L11.06 10l3.72-3.72a.75.75 0 00-1.06-1.06L10 8.94 6.28 5.22z" />
+        {% if app.flashes('success') %}
+            {% for message in app.flashes('success') %}
+                <div class="mb-4 rounded-md bg-green-100 p-4" x-data="{ show: true }" x-show="show" x-transition>
+                    <div class="flex">
+                        <div class="flex-shrink-0">
+                            <svg class="h-5 w-5 text-green-500" viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
                             </svg>
-                        </button>
+                        </div>
+                        <div class="ml-3">
+                            <p class="text-sm font-medium text-green-800">{{ message }}</p>
+                        </div>
+                        <div class="ml-auto pl-3">
+                            <div class="-mx-1.5 -my-1.5">
+                                <button type="button" @click="show = false" class="inline-flex rounded-md bg-green-100 p-1.5 text-green-500 hover:text-green-600">
+                                    <span class="sr-only">Dismiss</span>
+                                    <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                        <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"/>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        {% endif %}
 
         <div class="sm:flex sm:items-center">
             <div class="sm:flex-auto">
