--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,10 +22,15 @@
 	<body class="bg-white">
 		{% include 'navbar.html.twig' %}
 		{% for message in app.flashes('success') %}
-			<div class="w-fit bg-green-100 ring-green-600 text-green-700 rounded-md p-4 mb-4">
+			<div class="w-full bg-green-100 text-green-700 p-4 mb-4">
 				{{ message }}
 			</div>
 		{% endfor %}
+        {% for message in app.flashes('error') %}
+            <div class="w-full bg-red-100 text-red-700 p-4 mb-4">
+                {{ message }}
+            </div>
+        {% endfor %}
 		<main>
 			{% block body %}{% endblock %}
 		</main>
